Responsivity of support page has been improved

--- a/support.html
+++ b/support.html
@@ -21,9 +21,9 @@
     </head>
     <body>
     <a href="index.html">Back to my portfolio</a>
-        <h1>Support</h1>
-        <h4>If you need help or informations please write to me!</h4>
-        <div id="contact" class="contact introduction">
+        <h1 style="font-size: 5vh;">Support</h1>
+        <h4 style="font-size: 2vh;">If you need help or informations please write to me!</h4>
+        <div id="contact" class="contact">
             <h1>Contact:</h1>
             <div class="contactline">
                 <img src="gmail.png">
