--- a/index.html
+++ b/index.html
@@ -158,9 +158,7 @@
         </div>
     </div>
     
-    <div class="back">
-        <a href="#nav" class="">BACK</a>
-    </div>
+    <a href="#nav" class="back">BACK</a>
     
     <footer class="footer">
 		<p>&copy; Karol Borecki | 2019</p>
