Some comsmetic changes

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
         <div class="content" id="privacy" style="display: none;">
             <h1>Privacy</h1>
             <div style="margin-top: 10%;">
-                <a href="privacy_policy.html" target="_blank"><button class="btn">Link to my Privacy Policy</button></a><br>
-                <a href="support.html" target="_blank"><button class="btn">Support</button></a>
+                <a href="privacy_policy.html"><button class="btn">Link to my Privacy Policy</button></a><br>
+                <a href="support.html"><button class="btn">Support</button></a>
             </div>
         </div>
     </div>
