--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -4,7 +4,8 @@
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
       <title>Privacy Policy</title>
-      <style> 
+    <link rel="icon" href="logo.png">
+        <style> 
         body { 
         font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; 
             background-color: #f2f2f2; 
