--- a/support.html
+++ b/support.html
@@ -4,8 +4,8 @@
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
       <title>Privacy Policy</title>
-        	<link rel="stylesheet" type="text/css" href="style.css">
-
+      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="icon" href="logo.png">
       <style> 
         body { 
         font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; 
