Show me More button has been fixed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div style="margin-top: 30%;">
                 <h1>Welcome!</h1>
                 <p>My name is Karol and I'm a mobile games developer.</p>
-                <button class="btn" onclick="changeContent('more')">Show me more</button>
+                <button class="btn" onclick="changeContent('aboutme')">Show me more</button>
             </div>
         </div>
 
