Link to app store in pong climb window has been added

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
             <img src="projectsscreenshots/4.png">
             <img src="projectsscreenshots/9.png">
             
-            <button class="btn" onclick="window.open('https://play.google.com/store/apps/details?id=com.karolborecki.PongClimb');">Google Play</button><br>
+            <button class="btn" onclick="window.open('https://play.google.com/store/apps/details?id=com.karolborecki.PongClimb');">Google Play</button>
+            <button class="btn projectbtn" onclick="window.open('https://itunes.apple.com/us/app/pongclimb/id1448132502?ls=1&mt=8');">App Store</button><br>
             
             <a onclick="changeContent('projects')">BACK</a>
         </div>
